# c-chat

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: CMakeLists.txt  client.c  server.c
cmake-modules/: FindCMakeTools.cmake
include/: logging.h  network.h  structures.h
src/: CMakeLists.txt  logging.c  network.c  structures.c
